# rs-ddd-axum-admin

./: Cargo.toml  README.md  config.toml.example
src/: main.rs
src/application/: README.md
src/application/dto/: department_dto.rs  employee_dto.rs  login_dto.rs  mod.rs  position_dto.rs  role_dto.rs
src/application/services/: department_service.rs  employee_service.rs  login_service.rs  mod.rs  position_service.rs  role_service.rs
src/cli/: hello.rs  mod.rs  serve.rs
src/common/: README.md  logger.rs  mod.rs  tree.rs  utils.rs  xtime.rs
src/common/crypto/: hash.rs
src/common/result/: response.rs
src/domain/: README.md
src/infrastructure/: README.md  mod.rs
src/infrastructure/persistence/: database.rs
src/infrastructure/repository/: department_repository.rs  employee_repository.rs  login_repository.rs  mod.rs  position_repository.rs  role_repository.rs
src/infrastructure/security/: identity.rs
src/interface/: README.md  mod.rs  router.rs
src/interface/controllers/: department_controller.rs  employee_controller.rs  login_controller.rs  mod.rs  position_controller.rs  role_controller.rs
src/interface/middleware/: auth.rs  cors.rs  identity.rs  log.rs  mod.rs  req_id.rs
