[package]
name = "rs-ddd-axum-admin"
version = "0.1.0"
edition = "2021"

[dependencies]
#错误处理
anyhow = "1.0.8"
thiserror = "2.0.6"

#时间处理
time = { version = "0.3.37", features = ["macros", "formatting", "parsing", "local-offset","serde"] }

#日志
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"]}
tracing-appender = "0.2.3"

# 配置
config = "0.15.0"


# 随机数
rand = "0.8.5"

# 验证器
validator = { version = "0.19.0", features = ["derive"]}

#web框架    
axum = "0.7.9"
axum-extra = "0.9.6"

#序列化/反序列化
serde = { version = "1.0.210", features = ["derive"]} 
serde_json = "1.0.128"


# 命令行
clap = { version = "4.5.23", features = ["derive"] }

# 临时文件
tempfile = "3.14.0"

# 异步运行时
tokio = { version = "1.42.0", features = ["full"] }

# 数据库
sea-orm = { version = "1.1.2", features = ["runtime-tokio-native-tls", "sqlx-mysql", "macros", "debug-print"] }

# jwt
jsonwebtoken = "9.3.0"

# 哈希,加密
md-5 = "0.10.6"
sha1 = "0.10.6"
sha2 = "0.10.8"
hmac = "0.12.1"
digest = "0.10.7"
const-hex = "1.14.0"

tower-http = { version = "0.6.2", features = ["trace"] }
once_cell = "1.20.2"
hyper = { version = "1.5.2", features = ["full"] }
http-body-util = "0.1.2"
nanoid = "0.4.0"
bytes = "1.9.0"
chrono = { version = "0.4.39", features = ["serde"] }
http = "1.2.0"

